[package]
name = "soroban_business_entity_dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "0.9.2" }
soroban-token-sdk = { version = "0.9.2" }

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
soroban-auth = { version = "0.8.3", features = ["testutils"] }

[workspace.dependencies]
soroban-sdk = { version = "0.9.2", path = "soroban-sdk" }
soroban-sdk-macros = { version = "0.9.2", path = "soroban-sdk-macros" }
soroban-spec = { version = "0.9.2", path = "soroban-spec" }
soroban-spec-rust = { version = "0.9.2", path = "soroban-spec-rust" }
soroban-ledger-snapshot = { version = "0.9.2", path = "soroban-ledger-snapshot" }
soroban-token-sdk = { version = "0.9.2", path = "soroban-token-sdk" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true